--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 Tools to analze MGEN logfiles:
 
 ignore-startup_phase      remove the first n receive-events from every flow
+ignore-sequence_numbers   keep packets with sequence numbers in [low,high]
 packet-loss-filter        print a message for lost or too late packets
 packet-loss-analyzer      count number of received packets and print statistics
                           for each flow and a summary
 packet-dup-loss-analyzer  print lost or duplicated packet per flow
+
+ignore-startup_phase and ignore-sequence_numbers expect the option '-v' to set
+variables.
