--- a/README
+++ b/README
@@ -3,6 +3,7 @@ Tools to analze MGEN logfiles:
 ignore-startup_phase      remove the first n receive-events from every flow
 ignore-sequence_numbers   keep packets with sequence numbers in [low,high]
 packet-loss-filter        print a message for lost or too late packets
+packet-reorder-filter     print a message for reordered packets
 packet-loss-analyzer      count number of received packets and print statistics
                           for each flow and a summary
 packet-dup-loss-analyzer  print lost or duplicated packet per flow
