add new tool flow-statistics
The flow-statistics tool computes and prints per-flow statistics,
while average-bandwidth computes and prints aggregated statistics
over all flows.

--- a/README
+++ b/README
@@ -1,11 +1,13 @@
 Tools to analyze MGEN logfiles:
 
 average-bandwidth         compute overall average bandwidth and other statistics
+                          (aggregated information over all flows)
 flow-info-csv             create CSV table (with header) of info about the
                           streams included in the log like src/dst IPs, creates
                           lists of values for more dynamic streams (or multiply
                           used stream IDs)
 flow-latency-analyzer     calculate min, max and average latency of flows
+flow-statistics           compute per-flow statistics
 ignore-sequence_numbers   keep packets with sequence numbers in [low,high]
 ignore-startup_phase      remove the first n receive events from every flow
 packet-dup-loss-analyzer  print lost or duplicated packets
@@ -40,6 +42,7 @@ Some tools read all input before any output, others produce output immediately:
    - average-bandwidth
    - flow-info-csv
    - flow-latency-analyzer
+   - flow-statistics
    - packet-dup-loss-analyzer
    - packet-loss-analyzer
 
