--- a/README
+++ b/README
@@ -7,7 +7,7 @@ flow-info-csv             create CSV table (with header) of info about the
                           lists of values for more dynamic streams (or multiply
                           used stream IDs)
 flow-latency-analyzer     calculate min, max and average latency of flows
-flow-outages              print per flow outage times with lost packets
+flow-outages              print per flow per outage times and lost packets
 flow-statistics           compute per-flow statistics
 ignore-sequence_numbers   keep packets with sequence numbers in [low,high]
 ignore-startup_phase      remove the first n receive events from every flow
